--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 OPENAI_API_KEY=your_openai_api_key_here
-MODEL_NAME=gpt-4
+MODEL_NAME=gpt-4o
 TEMPERATURE_DEVELOPER=0.7
 TEMPERATURE_REVIEWER=0.4
 REQUEST_TIMEOUT=600 
